<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/ic_language" />

        <TextView
            android:layout_width="86dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_50"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="@dimen/dp_86"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_100"
            android:text="@string/english"
            android:textColor="#4356B4"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_forward" />
    </TableRow>

    <View
        android:layout_width="@dimen/dp_310"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#D2D2D2" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/ic_notify" />

        <TextView
            android:layout_width="@dimen/dp_86"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_50"
            android:text="@string/notify"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <View
            android:layout_width="@dimen/dp_86"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_100"
            android:textColor="#4356B4" />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="@dimen/dp_12"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_forward" />
    </TableRow>

    <View
        android:layout_width="@dimen/dp_310"
        android:layout_height="@dimen/dp_1"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#D2D2D2" />


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_20"
            android:contentDescription="@null"
            android:src="@drawable/ic_version" />

        <TextView
            android:layout_width="@dimen/dp_86"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_50"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:layout_width="@dimen/dp_86"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_100"
            android:gravity="end"
            android:text="@string/_1_0_0"
            android:textColor="#999999"
            android:textSize="@dimen/sp_16" />
    </TableRow>

    <View
        android:layout_width="@dimen/dp_310"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/white" />

</LinearLayout>