<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rikkei.tranning.basekotlin.viewmodel.ForgotVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.05"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_30"
            android:fontFamily="@font/lato_bold"
            android:text="@string/text_forgot_password_2"
            android:textColor="#4356B4"
            android:textSize="@dimen/sp_32"
            app:layout_constraintBottom_toTopOf="@+id/text_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/image_back"
            app:layout_constraintTop_toBottomOf="@+id/image_back" />


        <TextView
            android:id="@+id/text_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_100"
            android:fontFamily="@font/lato_regular"
            android:text="@string/text_email"
            android:textColor="#999999"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toTopOf="@id/edit_email"
            app:layout_constraintEnd_toEndOf="@id/text_forget_password"
            app:layout_constraintStart_toStartOf="@id/text_forget_password"
            app:layout_constraintTop_toBottomOf="@+id/text_forget_password" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/text_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="#676767"
            android:textSize="@dimen/sp_18"
            app:layout_constraintBottom_toTopOf="@+id/bt_confirm"
            app:layout_constraintEnd_toEndOf="@id/text_forget_password"
            app:layout_constraintStart_toStartOf="@id/text_forget_password"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            tools:ignore="Autofill" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/ic_mail_login"
            app:layout_constraintBottom_toBottomOf="@+id/edit_email"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/edit_email"
            app:layout_constraintHeight_percent="0.03"
            app:layout_constraintTop_toBottomOf="@+id/text_email"
            tools:ignore="ContentDescription" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:backgroundTint="@color/san_marino"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/text_confirm"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="@id/text_forget_password"
            app:layout_constraintStart_toStartOf="@id/image_back"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
