<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rikkei.tranning.basekotlin.viewmodel.PersonalPageVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/wild_sand">

        <ImageView
            android:id="@+id/iv_view_personal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dp_288"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_personal_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="0:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/ln_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_220"
            android:background="@drawable/bg_corners"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/ic_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_96"
                android:layout_marginStart="@dimen/dp_50"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp_20"
                android:gravity="center|start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/text_name"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_email"
                    android:textColor="#999999" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_pencil"
                android:layout_width="@dimen/sp_18"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_50"
                android:contentDescription="@null"
                android:src="@drawable/ic_pencil" />
        </LinearLayout>

        <include
            android:id="@+id/ic_details"
            layout="@layout/view_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/ln_logout"
            app:layout_constraintEnd_toEndOf="@id/ln_information"
            app:layout_constraintStart_toStartOf="@id/ln_information"
            app:layout_constraintTop_toBottomOf="@id/ln_information" />

        <LinearLayout
            android:id="@+id/ln_logout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ic_details"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="@id/ic_details"
            app:layout_constraintTop_toBottomOf="@id/ic_details">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_45"
                android:contentDescription="@null"
                android:src="@drawable/ic_logout" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="@dimen/dp_86"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_45"
                android:text="@string/sign_out"
                android:textColor="#C92323"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>